--- a/src/components/style.css
+++ b/src/components/style.css
@@ -20,25 +20,39 @@ h1{
     font-weight:bold;
 }
 
-#customers {
+#teams {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
   
-  #customers td, #customers th {
+  #teams td, #teams th {
     border: 1px solid #ddd;
     padding: 8px;
   }
   
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
+  #teams tr:nth-child(even){background-color: #f2f2f2;}
   
-  #customers tr:hover {background-color: #ddd;}
+  #teams tr:hover {background-color: #045aaa;}
   
-  #customers th {
+  #teams th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
+    background-color: #045aaa;
     color: white;
+    text-align: center;
+  }
+  
+  #teams td {
+    text-align: center;
+    
+  }
+
+
+  .batsman {
+    color: red;
+  }
+  .rest{
+    color:green;
   }
